[#1112] Fix the z-index of the subnavigation vs breadcrumbs

--- a/templates/bmc/less/_layout/header/header.less
+++ b/templates/bmc/less/_layout/header/header.less
@@ -325,7 +325,7 @@ header.page {
 			.transition();
 			position: relative;
 			margin-left: @logoWidth + 2.2rem;
-			z-index: 6;
+			z-index: 8;
 
 			li {
 
